Fix code bloks wrapp
Added new css class for horizontally-scrolled <pre code> blocks.
From now code example stays in line. Temporary changed from min.css
to css.

--- a/bitebybits/blog/static/css/clean-blog.css
+++ b/bitebybits/blog/static/css/clean-blog.css
@@ -405,3 +405,10 @@ img::-moz-selection {
 body {
   -webkit-tap-highlight-color: #0085A1;
 }
+
+/* code blocks scroll horizontal does't wrap code blocks */
+pre code {
+    overflow-x: auto;
+    word-wrap: normal;
+    white-space: pre;
+}
